--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "It's a backend application to serve star war react application which consists of four sub-tasks API",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,9 @@
     "express": "^4.17.1",
     "mongoose": "^5.7.13",
     "uuid": "^3.3.3"
+  },
+  "devDependencies": {
+    "jest": "^24.9.0",
+    "supertest": "^4.0.2"
   }
 }
